--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.20.0"
-  }
+    "axios-mock-adapter": "^1.20.0",
+    "gh-pages": "^3.2.3"
+  },
+  "homepage": "https://matycarolina.github.io/mocking-datos"
 }
